cmake_minimum_required(VERSION 2.6)
project(SERVER)

add_subdirectory(${SERVER_SOURCE_DIR}/lib/shared)
add_subdirectory(${SERVER_SOURCE_DIR}/lib/network)
add_subdirectory(${SERVER_SOURCE_DIR}/server/message)
add_subdirectory(${SERVER_SOURCE_DIR}/server/core)
add_subdirectory(${SERVER_SOURCE_DIR}/server/GateServer)
add_subdirectory(${SERVER_SOURCE_DIR}/server/GameServer)
#add_subdirectory(${SERVER_SOURCE_DIR}/server/DataServer)
add_subdirectory(${SERVER_SOURCE_DIR}/server/LoginServer)
add_subdirectory(${SERVER_SOURCE_DIR}/server/CentralServer)
#add_subdirectory(${SERVER_SOURCE_DIR}/server/BIServer)
#add_subdirectory(${SERVER_SOURCE_DIR}/server/PaymentServer)
#add_subdirectory(${SERVER_SOURCE_DIR}/test)
